--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,3 @@
-
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
@@ -10,7 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "^5.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
